--- a/notebooks/main_individuos.ipynb
+++ b/notebooks/main_individuos.ipynb
@@ -17,63 +17,41 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "0e56053e",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a33b6d25",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys \n",
-    "sys.path.append(\"..\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d707abd8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src.utils.constantes import DATA_RAW_PATH , DATA_PROCESSED_PATH\n",
-    "from glob import glob "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "5b07fee8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def unir_lineas(f,processed):\n",
-    "    for lines in f: \n",
-    "        processed.write(lines)\n",
-    "\n",
-    "def unir_archivos_individuos (tipo): \n",
-    "    new_tipo = str(tipo) + \"*\"\n",
-    "    new_tipo_csv = str(tipo) + \".csv\"\n",
-    "    encabezado = False\n",
-    "    archivo_processed = DATA_PROCESSED_PATH / new_tipo_csv\n",
-    "    \n",
-    "    with archivo_processed.open(\"w\") as processed:\n",
-    "        \n",
-    "        for archivo in DATA_RAW_PATH.glob(new_tipo):\n",
-    "            \n",
-    "            with open(archivo) as f:\n",
-    "                if encabezado == False: \n",
-    "                    unir_lineas(f,processed)\n",
-    "                    encabezado = True \n",
-    "                else: \n",
-    "                    f.next() \n",
-    "                    unir_lineas(f,processed)\n",
-    "\n",
-    "            "
+    "import sys \n",
+    "sys.path.append(\"..\")\n",
+    "from src.utils.funciones import unir_archivos\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c192335",
+   "metadata": {},
+   "source": [
+    "Luego de importar la funcion unir_archivos (encontrada en funciones.py), que permite unificar cualq archivo .txt del tipo usu_hogar o usu_individuos, se le pasa por parametro el tipo utilizado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6d8ae30f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unir_archivos(\"usu_individual\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1fe9d25",
+   "metadata": {},
+   "source": [
+    "De esta forma se crea el archivo CSV que unifica todos los demas archivos.txt, sin repetir encabezados "
    ]
   }
  ],
