Correccion de errores

--- a/notebooks/Sección_B.ipynb
+++ b/notebooks/Sección_B.ipynb
@@ -2,10 +2,26 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "f10f4df6",
+   "metadata": {},
+   "source": [
+    " Sección B: información a obtener: consultas al dataset principal \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8672941",
+   "metadata": {},
+   "source": [
+    "Tomando como fuente los datasets generados en la sección A y sus nuevas columnas:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fda622ea",
    "metadata": {},
    "source": [
-    "A partir de la información de cada año contenida en el dataset se debe informar, año tras año, el porcentaje de personas mayores a 6 años capaces e incapaces de leer y escribir.\n",
+    "1. A partir de la información de cada año contenida en el dataset se debe informar, año tras año, el porcentaje de personas mayores a 6 años capaces e incapaces de leer y escribir.\n",
     "Importante: tomar la información del último trimestre de cada año."
    ]
   },
@@ -225,8 +241,208 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d5f3715",
+   "id": "63062741",
    "metadata": {},
+   "source": [
+    "3. A partir de la información contenida en el dataset informar el año y trimestre donde\n",
+    "hubo menor desocupación.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ecbf655",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c928fc58",
+   "metadata": {},
+   "source": [
+    "4. Ranking de los 5 aglomerados con mayor porcentaje de hogares con dos o más\n",
+    "ocupantes con estudios universitarios o superiores finalizados. Información obtenida\n",
+    "a partir del par de archivos más recientes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "198d26d9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80160c75",
+   "metadata": {},
+   "source": [
+    "5. Informar para cada aglomerado el porcentaje de viviendas ocupadas por sus\n",
+    "propietarios."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27f689bb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ffec453",
+   "metadata": {},
+   "source": [
+    "6. Informar el aglomerado con mayor cantidad de viviendas con más de dos ocupantes\n",
+    "y sin baño. Informar también la cantidad de ellas.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5cae207",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04a859ca",
+   "metadata": {},
+   "source": [
+    "7. Informar para cada aglomerado el porcentaje de personas que hayan cursado al\n",
+    "menos en nivel universitario o superior.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02182578",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba304dc4",
+   "metadata": {},
+   "source": [
+    "8. Informar las regiones en orden descendente según el porcentaje de inquilinos de\n",
+    "cada una"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f544e833",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f21c7002",
+   "metadata": {},
+   "source": [
+    "9. Pedir al usuario que seleccione un aglomerado y a partir de la información contenida\n",
+    "retornar una tabla que contenga la cantidad de personas mayores de edad según su\n",
+    "nivel de estudios alcanzados\n",
+    "\n",
+    "A modo de ejemplo:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33420390",
+   "metadata": {},
+   "source": [
+    "Nombre de Aglomerado\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ac77178",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34528e72",
+   "metadata": {},
+   "source": [
+    "10. Pedir al usuario que seleccione dos aglomerados y a partir de la información\n",
+    "contenida retornar una tabla que contenga el porcentaje de personas mayores de\n",
+    "edad con secundario incompleto.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dac01deb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77b3c18d",
+   "metadata": {},
+   "source": [
+    "11. Pedir al usuario que seleccione un año, y busque en el último trimestre almacenado\n",
+    "del mencionado año, el aglomerado con mayor porcentaje de viviendas de “Material\n",
+    "precario” y el aglomerado con menor porcentaje de viviendas de “Material precario”."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31b868e9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b39c1df6",
+   "metadata": {},
+   "source": [
+    "12. A partir de la información del último trimestre almacenado en el sistema se debe\n",
+    "retornar para cada aglomerado el porcentaje de jubilados que vivan en una vivienda\n",
+    "con CONDICION_DE_HABITABILIDAD insuficiente"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9d52edb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7fcebae",
+   "metadata": {},
+   "source": [
+    "13. Solicitar un año al usuario y a partir de la información del último trimestre de dicho\n",
+    "ejercicio informar la cantidad de personas que hayan cursado nivel universitario o\n",
+    "superior y que vivan en una vivienda con CONDICION_DE_HABITABILIDAD\n",
+    "insuficiente"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e97e9a2e",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
