--- a/notebooks/main_individuos.ipynb
+++ b/notebooks/main_individuos.ipynb
@@ -18,14 +18,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "5b07fee8",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys \n",
     "sys.path.append(\"..\")\n",
-    "from src.utils.funciones import unir_archivos\n"
+    "from src.utils.funciones import unir_archivos\n",
+    "import csv \n",
+    "from src.utils.constantes import DATA_PROCESSED_PATH, DATA_CLEAN_PATH "
    ]
   },
   {
@@ -38,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "6d8ae30f",
    "metadata": {},
    "outputs": [],
@@ -52,6 +54,67 @@
    "metadata": {},
    "source": [
     "De esta forma se crea el archivo CSV que unifica todos los demas archivos.txt, sin repetir encabezados "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83294af4",
+   "metadata": {},
+   "source": [
+    "En esta seccion se cumplira con las siguientes consignas de la seccion A, y se traduciran los datos numericos a datos legibles\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "542b3da8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ch04_str (lector,fila): \n",
+    "    if fila[11] == \"1\": \n",
+    "        fila.append(\"masculino\")\n",
+    "    else: \n",
+    "        fila.append(\"femenino\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fc6b174",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "UnsupportedOperation",
+     "evalue": "not readable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mUnsupportedOperation\u001b[39m                      Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 12\u001b[39m\n\u001b[32m     10\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m fila \u001b[38;5;129;01min\u001b[39;00m lector: \n\u001b[32m     11\u001b[39m     ch04_str(lector,fila)\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m \u001b[43m\u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mfila\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mf\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\n\u001b[32m     13\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mprint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfila\u001b[49m\u001b[43m)\u001b[49m \n",
+      "\u001b[31mUnsupportedOperation\u001b[39m: not readable"
+     ]
+    }
+   ],
+   "source": [
+    "archivo_clean = DATA_CLEAN_PATH / \"usu_clean_individual.csv\"\n",
+    "archivo_processed = DATA_PROCESSED_PATH / \"usu_individual.csv\"\n",
+    "archivo_csv = open(archivo_processed, encoding='utf-8')\n",
+    "\n",
+    "with archivo_clean.open(\"w\") as f:\n",
+    "    with archivo_processed.open(\"r\",encoding=\"utf-8\") as p:\n",
+    "        lector = csv.reader(p,delimiter=\";\")\n",
+    "        encabezado = next(lector) + [\"CH04_str\", \"NIVEL_ED_str\",\"CONDICION_LABORAL\",\"UNIVERSITARIO\"]\n",
+    "        escritor = csv.writer(f)\n",
+    "        for fila in lector: \n",
+    "            ch04_str(lector,fila)\n",
+    "        \n",
+    "\n",
+    "\n",
+    "    \n",
+    "\n",
+    " "
    ]
   }
  ],
