actualizacion de individuos seccion A (TERMINADA)

--- a/notebooks/main_individuos.ipynb
+++ b/notebooks/main_individuos.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "5b07fee8",
    "metadata": {},
    "outputs": [],
@@ -67,36 +67,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "id": "542b3da8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ch04_str (lector,fila): \n",
+    "def ch04_str (new_fila,fila):  \n",
     "    if fila[11] == \"1\": \n",
-    "        fila.append(\"masculino\")\n",
+    "        new_fila.append(\"masculino\")\n",
     "    else: \n",
-    "        fila.append(\"femenino\")"
+    "        new_fila.append(\"femenino\")\n",
+    "\n",
+    "def nivel_ed (new_fila,fila):\n",
+    "    if fila[26] == \"1\": \n",
+    "        new_fila.append(\"primario incompleto\")\n",
+    "    elif fila[26] == \"2\": \n",
+    "        new_fila.append(\"primario completo\")\n",
+    "    elif fila[26] == \"3\": \n",
+    "        new_fila.append(\"secundario incompleto\")\n",
+    "    elif fila[26] == \"4\": \n",
+    "        new_fila.append(\"secundario completo\")\n",
+    "    elif fila[26] == \"5\" or fila[26] == \"6\": \n",
+    "        new_fila.append(\"superior o universitario\")\n",
+    "    else:\n",
+    "        new_fila.append(\"sin informacion\")\n",
+    "\n",
+    "def condicion_laboral (new_fila,fila):\n",
+    "    if fila[27] == \"1\":\n",
+    "        if fila[28] == 1 or fila[28] == 2 : \n",
+    "            new_fila.append(\"ocupado autonomo\")\n",
+    "        else:\n",
+    "            for i in [\"3\",\"4\",\"9\"]:\n",
+    "                if fila[28] == i: \n",
+    "                    new_fila.append(\"ocupado dependiente\")\n",
+    "    elif fila[27] == \"2\": \n",
+    "        new_fila.append(\"desocupado\")\n",
+    "    elif fila[27] == \"3\": \n",
+    "        new_fila.append(\"inactivo\")\n",
+    "    else: \n",
+    "        new_fila.append(\"fuera de categoria\")\n",
+    "    \n",
+    "def universitario (new_fila,fila): \n",
+    "    if fila[13] < \"18\":\n",
+    "        new_fila.append(\"2\")\n",
+    "    else: \n",
+    "        if fila[26] == \"5\" or fila[26] == \"6\":\n",
+    "            new_fila.append(\"1\")\n",
+    "        else: \n",
+    "            new_fila.append(\"0\")\n",
+    "\n",
+    "def new_fila (fila):\n",
+    "    new_fila = fila[:]\n",
+    "    ch04_str(new_fila,fila)\n",
+    "    nivel_ed(new_fila,fila)\n",
+    "    condicion_laboral(new_fila,fila)\n",
+    "    universitario(new_fila,fila)\n",
+    "    return new_fila"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "3fc6b174",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "UnsupportedOperation",
-     "evalue": "not readable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mUnsupportedOperation\u001b[39m                      Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 12\u001b[39m\n\u001b[32m     10\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m fila \u001b[38;5;129;01min\u001b[39;00m lector: \n\u001b[32m     11\u001b[39m     ch04_str(lector,fila)\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m \u001b[43m\u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mfila\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mf\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\n\u001b[32m     13\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mprint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfila\u001b[49m\u001b[43m)\u001b[49m \n",
-      "\u001b[31mUnsupportedOperation\u001b[39m: not readable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "archivo_clean = DATA_CLEAN_PATH / \"usu_clean_individual.csv\"\n",
     "archivo_processed = DATA_PROCESSED_PATH / \"usu_individual.csv\"\n",
@@ -107,8 +141,9 @@
     "        lector = csv.reader(p,delimiter=\";\")\n",
     "        encabezado = next(lector) + [\"CH04_str\", \"NIVEL_ED_str\",\"CONDICION_LABORAL\",\"UNIVERSITARIO\"]\n",
     "        escritor = csv.writer(f)\n",
-    "        for fila in lector: \n",
-    "            ch04_str(lector,fila)\n",
+    "        escritor.writerow(encabezado)\n",
+    "        for fila in lector:\n",
+    "            escritor.writerow(new_fila(fila))\n",
     "        \n",
     "\n",
     "\n",
