poniendo las funciones del notebook principal al archivo funciones.py

--- a/notebooks/mainA_individuos.ipynb
+++ b/notebooks/mainA_individuos.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "5b07fee8",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,8 @@
     "sys.path.append(\"..\")\n",
     "from src.utils.funciones import unir_archivos\n",
     "import csv \n",
-    "from src.utils.constantes import DATA_PROCESSED_PATH, DATA_CLEAN_PATH "
+    "from src.utils.constantes import DATA_PROCESSED_PATH, DATA_CLEAN_PATH \n",
+    "from src.utils.funciones import ch04_str, condicion_laboral, nivel_ed, universitario"
    ]
   },
   {
@@ -67,67 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "542b3da8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def ch04_str (new_fila,fila):  \n",
-    "    if fila[11] == \"1\": \n",
-    "        new_fila.append(\"masculino\")\n",
-    "    else: \n",
-    "        new_fila.append(\"femenino\")\n",
-    "\n",
-    "def nivel_ed (new_fila,fila):\n",
-    "    if fila[26] == \"1\": \n",
-    "        new_fila.append(\"primario incompleto\")\n",
-    "    elif fila[26] == \"2\": \n",
-    "        new_fila.append(\"primario completo\")\n",
-    "    elif fila[26] == \"3\": \n",
-    "        new_fila.append(\"secundario incompleto\")\n",
-    "    elif fila[26] == \"4\": \n",
-    "        new_fila.append(\"secundario completo\")\n",
-    "    elif fila[26] == \"5\" or fila[26] == \"6\": \n",
-    "        new_fila.append(\"superior o universitario\")\n",
-    "    else:\n",
-    "        new_fila.append(\"sin informacion\")\n",
-    "\n",
-    "def condicion_laboral (new_fila,fila):\n",
-    "    if fila[27] == \"1\":\n",
-    "        if fila[28] == 1 or fila[28] == 2 : \n",
-    "            new_fila.append(\"ocupado autonomo\")\n",
-    "        else:\n",
-    "            for i in [\"3\",\"4\",\"9\"]:\n",
-    "                if fila[28] == i: \n",
-    "                    new_fila.append(\"ocupado dependiente\")\n",
-    "    elif fila[27] == \"2\": \n",
-    "        new_fila.append(\"desocupado\")\n",
-    "    elif fila[27] == \"3\": \n",
-    "        new_fila.append(\"inactivo\")\n",
-    "    else: \n",
-    "        new_fila.append(\"fuera de categoria\")\n",
-    "    \n",
-    "def universitario (new_fila,fila): \n",
-    "    if fila[13] < \"18\":\n",
-    "        new_fila.append(\"2\")\n",
-    "    else: \n",
-    "        if fila[26] == \"5\" or fila[26] == \"6\":\n",
-    "            new_fila.append(\"1\")\n",
-    "        else: \n",
-    "            new_fila.append(\"0\")\n",
-    "\n",
-    "def new_fila (fila):\n",
-    "    new_fila = fila[:]\n",
-    "    ch04_str(new_fila,fila)\n",
-    "    nivel_ed(new_fila,fila)\n",
-    "    condicion_laboral(new_fila,fila)\n",
-    "    universitario(new_fila,fila)\n",
-    "    return new_fila"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "3fc6b174",
    "metadata": {},
    "outputs": [],
@@ -135,6 +76,14 @@
     "archivo_clean = DATA_CLEAN_PATH / \"usu_clean_individual.csv\"\n",
     "archivo_processed = DATA_PROCESSED_PATH / \"usu_individual.csv\"\n",
     "archivo_csv = open(archivo_processed, encoding='utf-8')\n",
+    "\n",
+    "def new_fila (fila):\n",
+    "    new_fila = fila[:]\n",
+    "    ch04_str(new_fila,fila)\n",
+    "    nivel_ed(new_fila,fila)\n",
+    "    condicion_laboral(new_fila,fila)\n",
+    "    universitario(new_fila,fila)\n",
+    "    return new_fila\n",
     "\n",
     "with archivo_clean.open(\"w\") as f:\n",
     "    with archivo_processed.open(\"r\",encoding=\"utf-8\") as p:\n",
