arreglo seccion A para que pueda recibir multiples trimestres, inicio de la seccion B en limpio

--- a/notebooks/mainA_hogares.ipynb
+++ b/notebooks/mainA_hogares.ipynb
@@ -19,35 +19,23 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3993024b",
+   "id": "39af3f26",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys \n",
-    "sys.path.append(\"..\")"
+    "sys.path.append(\"..\")\n",
+    "from src.utils.funciones import unir_archivos"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "39af3f26",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src.utils.constantes import DATA_RAW_PATH , DATA_PROCESSED_PATH\n",
-    "from glob import glob \n",
-    "\n",
-    "from src.utils import funciones"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "652ea632",
    "metadata": {},
    "outputs": [],
    "source": [
-    "funciones.unir_archivos('usu_hogar')"
+    "unir_archivos('usu_hogar')"
    ]
   }
  ],
