--- a/notebooks/mainA_individuos.ipynb
+++ b/notebooks/mainA_individuos.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "id": "5b07fee8",
    "metadata": {},
    "outputs": [],
@@ -27,8 +27,9 @@
     "sys.path.append(\"..\")\n",
     "from src.utils.funciones import unir_archivos\n",
     "import csv \n",
-    "from src.utils.constantes import DATA_PROCESSED_PATH, DATA_CLEAN_PATH \n",
-    "from src.utils.funciones import ch04_str, condicion_laboral, nivel_ed, universitario"
+    "from src.utils.constantes import DATA_PROCESSED_PATH, DATA_CLEAN_PATH , DATA_RAW_PATH\n",
+    "from src.utils.funciones import ch04_str, condicion_laboral, nivel_ed, universitario, unir_lineas\n",
+    "from glob import glob "
    ]
   },
   {
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "id": "6d8ae30f",
    "metadata": {},
    "outputs": [],
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "id": "3fc6b174",
    "metadata": {},
    "outputs": [],
@@ -78,22 +79,22 @@
     "archivo_csv = open(archivo_processed, encoding='utf-8')\n",
     "\n",
     "def new_fila (fila):\n",
-    "    new_fila = fila[:]\n",
+    "    new_fila = fila\n",
     "    ch04_str(new_fila,fila)\n",
     "    nivel_ed(new_fila,fila)\n",
     "    condicion_laboral(new_fila,fila)\n",
     "    universitario(new_fila,fila)\n",
     "    return new_fila\n",
     "\n",
-    "with archivo_clean.open(\"w\") as f:\n",
+    "with archivo_clean.open(\"w\",newline=\"\", encoding=\"utf-8\") as f:\n",
     "    with archivo_processed.open(\"r\",encoding=\"utf-8\") as p:\n",
     "        lector = csv.reader(p,delimiter=\";\")\n",
     "        encabezado = next(lector) + [\"CH04_str\", \"NIVEL_ED_str\",\"CONDICION_LABORAL\",\"UNIVERSITARIO\"]\n",
     "        escritor = csv.writer(f)\n",
     "        escritor.writerow(encabezado)\n",
     "        for fila in lector:\n",
-    "            escritor.writerow(new_fila(fila))\n",
-    "        \n",
+    "            new_fila_1 = new_fila(fila) \n",
+    "            escritor.writerow(new_fila_1)        \n",
     "\n",
     "\n",
     "    \n",
