Terminando mainA_hogares y agregando funcionalidades

--- a/notebooks/mainA_hogares.ipynb
+++ b/notebooks/mainA_hogares.ipynb
@@ -18,14 +18,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "39af3f26",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys \n",
     "sys.path.append(\"..\")\n",
-    "from src.utils.funciones import unir_archivos"
+    "from src.utils.funciones import unir_archivos\n",
+    "import csv \n",
+    "from src.utils.constantes import DATA_PROCESSED_PATH, DATA_CLEAN_PATH , DATA_RAW_PATH\n",
+    "from src.utils.funciones import TIPO_HOGAR,MATERIAL_TECHUMBRE,DENSIDAD_HOGAR,CONDICION_DE_HABITABILIDAD\n",
+    "from glob import glob "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "631f290b",
+   "metadata": {},
+   "source": [
+    "Luego de importar la funcion unir_archivos (encontrada en funciones.py), que permite unificar cualq archivo .txt del tipo usu_hogar o usu_individuos, se le pasa por parametro el tipo utilizado"
    ]
   },
   {
@@ -36,6 +48,61 @@
    "outputs": [],
    "source": [
     "unir_archivos('usu_hogar')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8794a651",
+   "metadata": {},
+   "source": [
+    "De esta forma se crea el archivo CSV que unifica todos los demas archivos.txt, sin repetir encabezados "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "504f61ac",
+   "metadata": {},
+   "source": [
+    "En esta seccion se cumplira con las siguientes consignas de la seccion A, y se traduciran los datos numericos a datos legibles\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26af5635",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "archivo_clean = DATA_CLEAN_PATH / \"usu_clean_hogar.csv\"\n",
+    "archivo_processed = DATA_PROCESSED_PATH / \"usu_hogar.csv\"\n",
+    "archivo_csv = open(archivo_processed, encoding='utf-8')\n",
+    "\n",
+    "def new_fila (fila):\n",
+    "    new_fila = fila\n",
+    "    TIPO_HOGAR(new_fila,fila)\n",
+    "    MATERIAL_TECHUMBRE(new_fila,fila)\n",
+    "    DENSIDAD_HOGAR(new_fila,fila)\n",
+    "    CONDICION_DE_HABITABILIDAD(new_fila,fila)\n",
+    "    return new_fila\n",
+    "\n",
+    "with archivo_clean.open(\"w\",newline=\"\", encoding=\"utf-8\") as f:\n",
+    "    with archivo_processed.open(\"r\",encoding=\"utf-8\") as p:\n",
+    "        lector = csv.reader(p,delimiter=\";\")\n",
+    "        encabezado = next(lector) + [\"TIPO_HOGAR\", \"MATERIAL_TECHUMBRE\",\"DENSIDAD_HOGAR\",\"CONDICION_DE_HABITABILIDAD\"]\n",
+    "        escritor = csv.writer(f)\n",
+    "        escritor.writerow(encabezado)\n",
+    "        for fila in lector:\n",
+    "            new_fila_1 = new_fila(fila) \n",
+    "            escritor.writerow(new_fila_1)    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57d606a4",
+   "metadata": {},
+   "source": [
+    "IX_TOT --> Cantidad de miembros del hogar (COLUMNA 65)"
    ]
   }
  ],
