Progreso mainA_hogar

--- a/notebooks/mainA_hogar.ipynb
+++ b/notebooks/mainA_hogar.ipynb
@@ -2,24 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "601042d6",
+   "id": "6728576d",
    "metadata": {},
-   "source": [
-    "NOTEBOOK DE PROCESAMIENTO DE LOS ARCHIVOS usu_hogares.txt "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c843ed7b",
-   "metadata": {},
-   "source": [
-    "este archivo permite procesar de forma generica los archivos usu_hogar.txt de forma que se pueda añadir de forma que se pueda tener n cantidad de archivos y funcione de forma generica "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "39af3f26",
+   "execution_count": null,
+   "id": "ddf96f3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,22 +18,14 @@
     "from src.utils.funciones import unir_archivos\n",
     "import csv \n",
     "from src.utils.constantes import DATA_PROCESSED_PATH, DATA_CLEAN_PATH , DATA_RAW_PATH\n",
-    "from src.utils.funciones import TIPO_HOGAR,MATERIAL_TECHUMBRE,DENSIDAD_HOGAR,CONDICION_DE_HABITABILIDAD\n",
+    "from src.utils.funciones import TIPO_HOGAR, MATERIAL_TECHUMBRE, DENSIDAD_HOGAR, CONDICION_DE_HABITABILIDAD\n",
     "from glob import glob "
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "631f290b",
-   "metadata": {},
-   "source": [
-    "Luego de importar la funcion unir_archivos (encontrada en funciones.py), que permite unificar cualq archivo .txt del tipo usu_hogar o usu_individuos, se le pasa por parametro el tipo utilizado"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "652ea632",
+   "execution_count": 2,
+   "id": "443381e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,39 +34,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8794a651",
+   "id": "35d7b622",
    "metadata": {},
-   "source": [
-    "De esta forma se crea el archivo CSV que unifica todos los demas archivos.txt, sin repetir encabezados "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "504f61ac",
-   "metadata": {},
-   "source": [
-    "En esta seccion se cumplira con las siguientes consignas de la seccion A, y se traduciran los datos numericos a datos legibles\n",
-    " "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "26af5635",
+   "execution_count": null,
+   "id": "4fe2a395",
    "metadata": {},
    "outputs": [],
    "source": [
     "archivo_clean = DATA_CLEAN_PATH / \"usu_clean_hogar.csv\"\n",
     "archivo_processed = DATA_PROCESSED_PATH / \"usu_hogar.csv\"\n",
-    "archivo_csv = open(archivo_processed, encoding='utf-8')\n",
+    "\n",
+    "\n",
     "\n",
     "def new_fila (fila):\n",
-    "    new_fila = fila\n",
-    "    TIPO_HOGAR(new_fila,fila)\n",
-    "    MATERIAL_TECHUMBRE(new_fila,fila)\n",
-    "    DENSIDAD_HOGAR(new_fila,fila)\n",
-    "    CONDICION_DE_HABITABILIDAD(new_fila,fila)\n",
-    "    return new_fila\n",
+    "    new_fila_1 = fila.copy()\n",
+    "    TIPO_HOGAR(new_fila_1,fila)\n",
+    "    MATERIAL_TECHUMBRE(new_fila_1,fila)\n",
+    "    DENSIDAD_HOGAR(new_fila_1,fila)\n",
+    "    CONDICION_DE_HABITABILIDAD(new_fila_1,fila)\n",
+    "    return new_fila_1\n",
     "\n",
     "with archivo_clean.open(\"w\",newline=\"\", encoding=\"utf-8\") as f:\n",
     "    with archivo_processed.open(\"r\",encoding=\"utf-8\") as p:\n",
