progresos seccion B punto 1

--- a/notebooks/Main_B.ipynb
+++ b/notebooks/Main_B.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "id": "80db1157",
    "metadata": {},
    "outputs": [],
@@ -54,15 +54,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "4ea124a0",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['TQRMNOSUWHLMKQCDEFNFF00852219', '2023', '4', '1', '2', '1', '41', 'N', '7', '370', '2', '2', '26/02/1971', '52', '2', '1', '1', '2', '0', '4', '1', '', '1', '', '1', '', '4', '3', '0', '4', '', '0', '0', '0', '0', '0', '0', '0', '0', '0', '2', '2', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '0', '0', '0', '0', '', '0', '0', '370', '0', '0', '0', '0', '0', '', '0', '0', '370', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '12', '12', '12', '', '12', '12', '0', '12', '12', '12', '', '12', '12', '0', 'femenino', 'secundario completo', 'inactivo', '0']\n"
+     "ename": "TypeError",
+     "evalue": "porcentaje() missing 1 required positional argument: 'total'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[70]\u001b[39m\u001b[32m, line 62\u001b[39m\n\u001b[32m     60\u001b[39m dict_anios = agrupar_por_anio(new_list,\u001b[32m1\u001b[39m)\n\u001b[32m     61\u001b[39m dict_ultimos_tri = max_trimestre(dict_anios)\n\u001b[32m---> \u001b[39m\u001b[32m62\u001b[39m \u001b[43mactiv_1\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdict_ultimos_tri\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[70]\u001b[39m\u001b[32m, line 50\u001b[39m, in \u001b[36mactiv_1\u001b[39m\u001b[34m(dict_ultimos_tri)\u001b[39m\n\u001b[32m     48\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mactiv_1\u001b[39m(dict_ultimos_tri):\n\u001b[32m     49\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m anios \u001b[38;5;129;01min\u001b[39;00m dict_ultimos_tri: \n\u001b[32m---> \u001b[39m\u001b[32m50\u001b[39m         por_alfa, por_ana , por_desc = \u001b[43manalizar_analfabetismo\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdict_ultimos_tri\u001b[49m\u001b[43m,\u001b[49m\u001b[43manios\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     51\u001b[39m         \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33mel porcentaje de Alfabetismo en \u001b[39m\u001b[38;5;132;01m{\u001b[39;00manios\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m fue: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpor_alfa\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m /n el porcentaje de Analfabetismo fue: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpor_ana\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m /n el porcentaje de desconocidos fue: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpor_desc\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[70]\u001b[39m\u001b[32m, line 46\u001b[39m, in \u001b[36manalizar_analfabetismo\u001b[39m\u001b[34m(dict_ultimos_tri, anio)\u001b[39m\n\u001b[32m     44\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m: \n\u001b[32m     45\u001b[39m     desconocido += pondera\n\u001b[32m---> \u001b[39m\u001b[32m46\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mporcentaje\u001b[49m\u001b[43m(\u001b[49m\u001b[43malfabetos\u001b[49m\u001b[43m)\u001b[49m, porcentaje(analfabetos), porcentaje(desconocido)\n",
+      "\u001b[31mTypeError\u001b[39m: porcentaje() missing 1 required positional argument: 'total'"
      ]
     }
    ],
@@ -78,8 +84,46 @@
     "        grupos[anio].append(fila)\n",
     "    return grupos \n",
     "\n",
+    "def max_trimestre(dict_anios): \n",
+    "    dict_final = {}\n",
+    "    for anio in dict_anios:\n",
+    "        dict_temporal = {\n",
+    "        \"1\": [],\n",
+    "        \"2\": [],\n",
+    "        \"3\": [],\n",
+    "        \"4\": [] }\n",
+    "        max = \"0\" \n",
+    "        for filas in dict_anios[anio]:\n",
+    "            trimestre = filas[2]\n",
+    "            max = trimestre if trimestre > max else max \n",
+    "            dict_temporal[trimestre].append(filas)\n",
     "\n",
+    "        dict_final[anio] = dict_temporal[max]\n",
     "\n",
+    "    return dict_final\n",
+    "\n",
+    "def porcentaje(valor,total):\n",
+    "    return (valor / total) * 100\n",
+    "\n",
+    "def analizar_analfabetismo (dict_ultimos_tri, anio): \n",
+    "    alfabetos, analfabetos, desconocido, poblacion = 0, 0, 0, 0 \n",
+    "    for elem in dict_ultimos_tri[anio]: \n",
+    "        pondera = int(elem[9])\n",
+    "        poblacion += pondera\n",
+    "        if int(elem[13]) <= 6: \n",
+    "            continue\n",
+    "        if elem[16] == \"1\": \n",
+    "            alfabetos += pondera\n",
+    "        elif elem[16] == \"2\": \n",
+    "            analfabetos += pondera\n",
+    "        else: \n",
+    "            desconocido += pondera\n",
+    "        return porcentaje(alfabetos,poblacion), porcentaje(analfabetos,poblacion), porcentaje(desconocido,poblacion)\n",
+    "\n",
+    "def activ_1(dict_ultimos_tri):\n",
+    "    for anios in dict_ultimos_tri: \n",
+    "        por_alfa, por_ana , por_desc = analizar_analfabetismo(dict_ultimos_tri,anios)\n",
+    "        print(f'el porcentaje de Alfabetismo en {anios} fue: {por_alfa} /n el porcentaje de Analfabetismo fue: {por_ana} /n el porcentaje de desconocidos fue: {por_desc}')\n",
     "\n",
     "with archivo_clean_path.open(\"r\",encoding=\"utf-8\") as f:\n",
     "    reader = csv.reader(f,delimiter=\";\")\n",
@@ -88,8 +132,10 @@
     "    for elem in reader:\n",
     "        new_elem = elem[0].split(',')\n",
     "        new_list.append(new_elem)\n",
-    "    dict_anios = agrupar_por_anio(new_list)\n",
-    "            \n",
+    "    dict_anios = agrupar_por_anio(new_list,1)\n",
+    "    dict_ultimos_tri = max_trimestre(dict_anios)\n",
+    "    activ_1(dict_ultimos_tri)\n",
+    "\n",
     "            \n",
     "    "
    ]
