--- a/notebooks/mainA_hogares.ipynb
+++ b/notebooks/mainA_hogares.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "39af3f26",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,6 @@
     "from src.utils.funciones import unir_archivos\n",
     "import csv \n",
     "from src.utils.constantes import DATA_PROCESSED_PATH, DATA_CLEAN_PATH , DATA_RAW_PATH\n",
-    "from src.utils.funciones import TIPO_HOGAR,MATERIAL_TECHUMBRE,DENSIDAD_HOGAR,CONDICION_DE_HABITABILIDAD\n",
     "from glob import glob "
    ]
   },
@@ -42,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "id": "652ea632",
    "metadata": {},
    "outputs": [],
@@ -69,22 +68,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "26af5635",
+   "execution_count": 52,
+   "id": "521280fb",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from src.utils import funciones "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "26af5635",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'src.utils.funciones' has no attribute 'algo'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[53]\u001b[39m\u001b[32m, line 47\u001b[39m\n\u001b[32m     45\u001b[39m     new_fila_1 = new_fila(fila) \n\u001b[32m     46\u001b[39m     escritor.writerow(new_fila_1)    \n\u001b[32m---> \u001b[39m\u001b[32m47\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mfunciones\u001b[49m\u001b[43m.\u001b[49m\u001b[43malgo\u001b[49m(\u001b[32m2\u001b[39m))\n",
+      "\u001b[31mAttributeError\u001b[39m: module 'src.utils.funciones' has no attribute 'algo'"
+     ]
+    }
+   ],
+   "source": [
     "archivo_clean = DATA_CLEAN_PATH / \"usu_clean_hogar.csv\"\n",
     "archivo_processed = DATA_PROCESSED_PATH / \"usu_hogar.csv\"\n",
-    "archivo_csv = open(archivo_processed, encoding='utf-8')\n",
+    "\n",
+    "\n",
+    "def TIPO_HOGAR (new_fila,fila): \n",
+    "    if fila[64] == \"1\":\n",
+    "        new_fila.append(\"Unipersonal\")\n",
+    "    elif fila[64] in [\"2\",\"3\",\"4\"]:\n",
+    "        new_fila.append(\"Nuclear\")\n",
+    "    else:\n",
+    "        new_fila.append(\"Extendido\")\n",
+    "\n",
+    "def MATERIAL_TECHUMBRE (new_fila,fila): \n",
+    "    if fila[3] == \"5\" or fila[3] == \"6\" or fila[3] == \"7\":\n",
+    "        new_fila.append(\"Material precario\")\n",
+    "    elif fila[3] in [\"1\",\"2\",\"3\",\"4\"]:\n",
+    "        new_fila.append(\"Material durable\")\n",
+    "    elif fila[3] == \"9\":\n",
+    "        new_fila.append(\"No aplica\")\n",
+    "\n",
+    "def DENSIDAD_HOGAR (new_fila,fila): \n",
+    "    if fila[4] < \"1\":\n",
+    "        new_fila.append(\"Bajo\")\n",
+    "    elif fila[4] in [\"1\",\"2\"]:\n",
+    "        new_fila.append(\"Medio\")\n",
+    "    elif fila[4] > \"2\":\n",
+    "        new_fila.append(\"Alto\")\n",
+    "\n",
+    "\n",
     "\n",
     "def new_fila (fila):\n",
-    "    new_fila = fila\n",
-    "    TIPO_HOGAR(new_fila,fila)\n",
-    "    MATERIAL_TECHUMBRE(new_fila,fila)\n",
-    "    DENSIDAD_HOGAR(new_fila,fila)\n",
-    "    CONDICION_DE_HABITABILIDAD(new_fila,fila)\n",
-    "    return new_fila\n",
+    "    new_fila_1 = fila.copy()\n",
+    "    TIPO_HOGAR(new_fila_1,fila)\n",
+    "    MATERIAL_TECHUMBRE(new_fila_1,fila)\n",
+    "    DENSIDAD_HOGAR(new_fila_1,fila)\n",
+    "    return new_fila_1\n",
     "\n",
     "with archivo_clean.open(\"w\",newline=\"\", encoding=\"utf-8\") as f:\n",
     "    with archivo_processed.open(\"r\",encoding=\"utf-8\") as p:\n",
@@ -94,7 +140,8 @@
     "        escritor.writerow(encabezado)\n",
     "        for fila in lector:\n",
     "            new_fila_1 = new_fila(fila) \n",
-    "            escritor.writerow(new_fila_1)    "
+    "            escritor.writerow(new_fila_1)    \n",
+    "        print(funciones.algo(2))"
    ]
   },
   {
