arreglando seccion A, pasando las funciones a pindividuales.py

--- a/notebooks/mainA_individuos.ipynb
+++ b/notebooks/mainA_individuos.ipynb
@@ -18,17 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "5b07fee8",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys \n",
     "sys.path.append(\"..\")\n",
-    "from src.utils.funciones import unir_archivos\n",
+    "from src.utils.funciones import unir_archivos, unir_lineas\n",
     "import csv \n",
     "from src.utils.constantes import DATA_PROCESSED_PATH, DATA_CLEAN_PATH , DATA_RAW_PATH\n",
-    "from src.utils.funciones import ch04_str, condicion_laboral, nivel_ed, universitario, unir_lineas\n",
+    "from src.procesamientos.pindividuos import ch04_str, condicion_laboral, nivel_ed, universitario\n",
     "from glob import glob "
    ]
   },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "6d8ae30f",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "3fc6b174",
    "metadata": {},
    "outputs": [],
