--- a/notebooks/Main_B.ipynb
+++ b/notebooks/Main_B.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 29,
    "id": "80db1157",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,8 @@
     "import sys \n",
     "import csv\n",
     "sys.path.append(\"..\")\n",
-    "from src.utils.constantes import DATA_CLEAN_PATH\n"
+    "from src.utils.constantes import DATA_CLEAN_PATH\n",
+    "from src.utils.funciones import porcentaje\n"
    ]
   },
   {
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 30,
    "id": "a59ec020",
    "metadata": {},
    "outputs": [],
@@ -73,6 +74,7 @@
     "        dict_final[anio] = dict_temporal\n",
     "    return dict_final\n",
     "\n",
+    "\n",
     "def agrupar_por_anio_y_trimestre(filas, col_anio=1):\n",
     "    grupos = {}\n",
     "    for fila in filas:\n",
@@ -84,15 +86,11 @@
     "    return grupos_final\n",
     "\n",
     "\n",
-    "\n",
-    "def porcentaje(valor,total):\n",
-    "    return (valor / total) * 100\n",
-    "\n",
     "def analizar_analfabetismo (dict_ultimos_tri, anio): \n",
     "    alfabetos, analfabetos, desconocido, poblacion = 0, 0, 0, 0 \n",
     "    max_1 = max(dict_ultimos_tri[anio].keys())\n",
     "    for elem in dict_ultimos_tri[anio][max_1]:\n",
-    "        pondera = int(elem[9])\n",
+    "        pondera = int(elem[8])\n",
     "        poblacion += pondera\n",
     "        if int(elem[13]) <= 6: \n",
     "            continue\n",
@@ -112,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 31,
    "id": "4ea124a0",
    "metadata": {},
    "outputs": [],
@@ -132,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 32,
    "id": "ac15ca5e",
    "metadata": {},
    "outputs": [
@@ -141,13 +139,13 @@
      "output_type": "stream",
      "text": [
       "en 2024 \n",
-      "el porcentaje de Alfabetismo fue: 90.81% \n",
-      "el porcentaje de Analfabetismo fue: 0.84% \n",
-      "el porcentaje de desconocidos fue: 0.04%\n",
+      "el porcentaje de Alfabetismo fue: 91.91% \n",
+      "el porcentaje de Analfabetismo fue: 0.91% \n",
+      "el porcentaje de desconocidos fue: 0.02%\n",
       "en 2023 \n",
-      "el porcentaje de Alfabetismo fue: 90.42% \n",
-      "el porcentaje de Analfabetismo fue: 0.84% \n",
-      "el porcentaje de desconocidos fue: 0.06%\n"
+      "el porcentaje de Alfabetismo fue: 91.44% \n",
+      "el porcentaje de Analfabetismo fue: 0.89% \n",
+      "el porcentaje de desconocidos fue: 0.03%\n"
      ]
     }
    ],
@@ -214,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 33,
    "id": "7e2c6e15",
    "metadata": {},
    "outputs": [],
@@ -229,7 +227,7 @@
     "    try:\n",
     "        poblacion, ext_univ = 0, 0\n",
     "        for elem in dict_trimestres[anio_elegido][trimestre_elegido]:\n",
-    "            pondera = int(elem[9])\n",
+    "            pondera = int(elem[8])\n",
     "            poblacion += pondera\n",
     "            if not es_extranjero(elem[22]):\n",
     "                continue \n",
@@ -252,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 34,
    "id": "1d81e323",
    "metadata": {},
    "outputs": [
@@ -260,7 +258,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "el porcentaje de personas extranjeras universitarias es: 0.98\n"
+      "el porcentaje de personas extranjeras universitarias es: 0.53\n"
      ]
     }
    ],
@@ -297,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 35,
    "id": "e63c22ae",
    "metadata": {},
    "outputs": [],
@@ -315,7 +313,7 @@
     "            \n",
     "            ocupados, desocupados = 0, 0\n",
     "            for elem in dict_trimestres[anio][trimestre]: \n",
-    "                pondera = int(elem[9])\n",
+    "                pondera = int(elem[8])\n",
     "                if elem[27] == \"1\":\n",
     "                    ocupados += pondera\n",
     "                elif elem[27] == \"2\":\n",
@@ -344,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "id": "3e646b09",
    "metadata": {},
    "outputs": [
@@ -352,17 +350,193 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Menor tasa de desempleo: 5.73% en año 2023, trimestre 3\n"
+      "Menor tasa de desempleo: 4.71% en año 2023, trimestre 4\n"
      ]
     }
    ],
    "source": [
-    "activ_3(dict_trimestres)\n"
+    "activ_3(dict_trimestres)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e55ce890",
+   "metadata": {},
+   "source": [
+    "Abriendo el archivo Hogares\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 57,
+   "id": "534e0dd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def agrupar_por_aglomerado (elem, viejo_dict_aglomerados): \n",
+    "    if elem[7] not in viejo_dict_aglomerados: \n",
+    "        viejo_dict_aglomerados[elem[7]] = []\n",
+    "    viejo_dict_aglomerados[elem[7]].append(elem)\n",
+    "    return viejo_dict_aglomerados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7ee5a89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "archivo_clean_path = DATA_CLEAN_PATH / \"usu_clean_hogar.csv\"\n",
+    "\n",
+    "f = archivo_clean_path.open(\"r\",encoding=\"utf-8\") \n",
+    "reader = csv.reader(f,delimiter=\";\")\n",
+    "header = next(reader)\n",
+    "new_list = []\n",
+    "dict_aglomerados = {}\n",
+    "for elem in reader:\n",
+    "    new_elem = elem[0].split(',')\n",
+    "    dict_aglomerados = agrupar_por_aglomerado(new_elem,dict_aglomerados)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b538ced",
+   "metadata": {},
+   "source": [
+    "- 5. Informar para cada aglomerado el porcentaje de viviendas ocupadas por sus\n",
+    "propietarios."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "01e6365e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def porcentaje_propietarios_por_aglomerado(dict_aglomerados, col_aglomerado=7, col_pondera=8, col_tenencia=37):\n",
+    "    \n",
+    "    resultados = {}\n",
+    "    \n",
+    "    for aglomerado in dict_aglomerados:\n",
+    "        for elem in dict_aglomerados[aglomerado]:\n",
+    "            try:\n",
+    "                pondera = int(elem[col_pondera])\n",
+    "                tenencia = elem[col_tenencia]\n",
+    "\n",
+    "                if aglomerado not in resultados:\n",
+    "                    resultados[aglomerado] = {'total': 0, 'propietarios': 0}\n",
+    "        \n",
+    "                if tenencia in ('1', '2'):  # Propietario total o parcial\n",
+    "                    resultados[aglomerado]['propietarios'] += pondera\n",
+    "            \n",
+    "                resultados[aglomerado]['total'] += pondera \n",
+    "            except:\n",
+    "                continue \n",
+    "    # Calcular porcentaje para cada aglomerado\n",
+    "    for aglomerado, valores in sorted(resultados.items()):\n",
+    "        \n",
+    "        porcentaje_prop = porcentaje(valores[\"propietarios\"], valores[\"total\"])\n",
+    "        \n",
+    "        print(f\"Aglomerado {aglomerado}: {porcentaje_prop:.2f}% viviendas de propietarios\")\n",
+    "\n",
+    "    return resultados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "d516b09d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Aglomerado 10: 60.77% viviendas de propietarios\n",
+      "Aglomerado 12: 69.69% viviendas de propietarios\n",
+      "Aglomerado 13: 51.33% viviendas de propietarios\n",
+      "Aglomerado 14: 74.32% viviendas de propietarios\n",
+      "Aglomerado 15: 77.97% viviendas de propietarios\n",
+      "Aglomerado 17: 65.89% viviendas de propietarios\n",
+      "Aglomerado 18: 85.90% viviendas de propietarios\n",
+      "Aglomerado 19: 80.18% viviendas de propietarios\n",
+      "Aglomerado 2: 66.95% viviendas de propietarios\n",
+      "Aglomerado 20: 50.45% viviendas de propietarios\n",
+      "Aglomerado 22: 83.34% viviendas de propietarios\n",
+      "Aglomerado 23: 66.98% viviendas de propietarios\n",
+      "Aglomerado 25: 72.74% viviendas de propietarios\n",
+      "Aglomerado 26: 63.48% viviendas de propietarios\n",
+      "Aglomerado 27: 64.93% viviendas de propietarios\n",
+      "Aglomerado 29: 67.26% viviendas de propietarios\n",
+      "Aglomerado 3: 62.95% viviendas de propietarios\n",
+      "Aglomerado 30: 59.61% viviendas de propietarios\n",
+      "Aglomerado 31: 52.61% viviendas de propietarios\n",
+      "Aglomerado 32: 53.63% viviendas de propietarios\n",
+      "Aglomerado 33: 71.48% viviendas de propietarios\n",
+      "Aglomerado 34: 68.64% viviendas de propietarios\n",
+      "Aglomerado 36: 56.95% viviendas de propietarios\n",
+      "Aglomerado 38: 72.37% viviendas de propietarios\n",
+      "Aglomerado 4: 67.89% viviendas de propietarios\n",
+      "Aglomerado 5: 70.87% viviendas de propietarios\n",
+      "Aglomerado 6: 71.87% viviendas de propietarios\n",
+      "Aglomerado 7: 70.50% viviendas de propietarios\n",
+      "Aglomerado 8: 79.05% viviendas de propietarios\n",
+      "Aglomerado 9: 66.09% viviendas de propietarios\n",
+      "Aglomerado 91: 64.33% viviendas de propietarios\n",
+      "Aglomerado 93: 66.30% viviendas de propietarios\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'7': {'total': 562118, 'propietarios': 396282},\n",
+       " '32': {'total': 5086368, 'propietarios': 2727576},\n",
+       " '2': {'total': 1391093, 'propietarios': 931359},\n",
+       " '14': {'total': 207600, 'propietarios': 154284},\n",
+       " '15': {'total': 326156, 'propietarios': 254301},\n",
+       " '5': {'total': 774613, 'propietarios': 548934},\n",
+       " '27': {'total': 665636, 'propietarios': 432226},\n",
+       " '18': {'total': 500355, 'propietarios': 429822},\n",
+       " '26': {'total': 329945, 'propietarios': 209439},\n",
+       " '20': {'total': 188444, 'propietarios': 95062},\n",
+       " '29': {'total': 1114213, 'propietarios': 749475},\n",
+       " '33': {'total': 16420008, 'propietarios': 11736813},\n",
+       " '8': {'total': 552523, 'propietarios': 436792},\n",
+       " '23': {'total': 766163, 'propietarios': 513163},\n",
+       " '91': {'total': 226559, 'propietarios': 145741},\n",
+       " '3': {'total': 528468, 'propietarios': 332655},\n",
+       " '4': {'total': 2091663, 'propietarios': 1419938},\n",
+       " '31': {'total': 270947, 'propietarios': 142558},\n",
+       " '34': {'total': 1007078, 'propietarios': 691297},\n",
+       " '12': {'total': 507572, 'propietarios': 353715},\n",
+       " '30': {'total': 208989, 'propietarios': 124573},\n",
+       " '38': {'total': 282144, 'propietarios': 204188},\n",
+       " '17': {'total': 456490, 'propietarios': 300790},\n",
+       " '19': {'total': 436838, 'propietarios': 350269},\n",
+       " '36': {'total': 283238, 'propietarios': 161309},\n",
+       " '93': {'total': 126966, 'propietarios': 84174},\n",
+       " '13': {'total': 2378603, 'propietarios': 1220995},\n",
+       " '22': {'total': 275520, 'propietarios': 229614},\n",
+       " '9': {'total': 325672, 'propietarios': 215241},\n",
+       " '10': {'total': 1398968, 'propietarios': 850105},\n",
+       " '25': {'total': 284351, 'propietarios': 206835},\n",
+       " '6': {'total': 401043, 'propietarios': 288222}}"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "porcentaje_propietarios_por_aglomerado(dict_aglomerados)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "id": "15af1a1d",
    "metadata": {},
    "outputs": [],
